Implementação da função de disparo e acerto do alvo.

--- a/Index.html
+++ b/Index.html
@@ -5,6 +5,8 @@
     var tela = document.querySelector("canvas");
     var pincel = tela.getContext("2d");
     var raio = 10;
+    var xAleatorio;
+    var yAleatorio;
 
     pincel.fillStyle = "white";
     pincel.fillRect(0, 0, 600, 400);
@@ -38,12 +40,26 @@
     function atualizaTela() {
         
         limpaTela();
-        var xAleatorio = sorteiaPosicao(600);
-        var yAleatorio = sorteiaPosicao(400);
+        xAleatorio = sorteiaPosicao(600);
+        yAleatorio = sorteiaPosicao(400);
         desenhaAlvo(xAleatorio, yAleatorio);
 
     }
 
-    setInterval(atualizaTela, 1000);
+    setInterval(atualizaTela, 2000);
+
+    function dispara(evento) {
+
+        var x = evento.pageX - tela.offsetLeft;
+        var y = evento.pageY - tela.offsetTop;
+
+        if((x > xAleatorio - raio) && (x < xAleatorio + raio)
+        && (y > yAleatorio - raio) && (y < yAleatorio + raio)) {
+            alert("Acertou o alvo!");
+        }
+
+    }
+
+    tela.onclick = dispara;
 
 </script>
